css/style.css
/* ... */
.track {
    display: flex;

    transition: transform 0.4s ease;


}

.card:last-child {
    margin-right: 0;
}

.card {
    /* make perfect squares that shrink on small screens */
    flex: 0 0 600px;
    box-shadow: 0 6px 16px rgba(10, 20, 40, 0.08);
    user-select: none;
    margin-top: 4rem;
    width: 600px;
    height: 245px;
    background-color: #fff;
    border-radius: 10px;
    padding: 1rem;
    margin-right: 20px;

}


/* Controls container (below the cards) */
.controls {
    margin-top: 18px;
    display: flex;
    justify-content: center;

}

.btn2 {
    width: 45px;
    height: 45px;
    border-radius: 50%;
    border: none;
    display: inline-grid;
    place-items: center;
    background: #324b2f;
    box-shadow: 0 6px 14px rgba(10, 20, 40, 0.08);
    cursor: pointer;
    transition: transform 150ms, box-shadow 150ms;
    font-size: 18px;
    margin-left: .8rem;
    padding: 4px;
}

.btn2:active {
    transform: translateY(1px)
}

.btn2:focus {
    outline: #324b2f;
    outline-offset: 3px
}

.btn2:hover {
    background: #3c5839;
}


.btn1 {
    width: 45px;
    height: 45px;
    border-radius: 50%;
    border: none;
    display: inline-grid;
    place-items: center;
    background: #f4a300;
    box-shadow: 0 6px 14px rgba(10, 20, 40, 0.08);
    cursor: pointer;
    transition: transform 150ms, box-shadow 150ms;
    font-size: 18px;
    margin-left: -2rem;
    padding: 4px;
}

.btn1:active {
    transform: translateY(1px)
}

.btn1:focus {
    outline: #324b2f;
    outline-offset: 3px
}

.btn1:hover {
    background: #f7a707;
}

.accordion {
    width: 950px;

}

.accordion-item {
    background: rgba(255, 255, 255, 0.11);
    margin-bottom: 8px;
    border-radius: 5px;
    overflow: hidden;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
    border: none;

}

.accordion-header {
    padding: 15px 20px;
    cursor: pointer;
    position: relative;
    font-weight: bold;
    color: #fff;
    font-size: 1.4rem;
    font-weight: 600;
}

.accordion-header::after {
    content: '+';
    position: absolute;
    right: 25px;
    transition: transform 0.3s ease;
    font-size: 2rem;

}

.accordion-item.active .accordion-header::after {
    content: '-';
    transform: rotate(180deg);
    font-size: 3rem;
}

.accordion-content {
    max-height: 0;
    overflow: hidden;
    padding: 0 20px;
    transition: max-height 0.3s ease, padding 0.3s ease;
    background-color: #f4a300;
    color: #262525;
    font-size: 1rem;
}

.accordion-item.active {
    background: #f4a300;
    color: #000;
}

.accordion-item.active .accordion-header {
    color: #000;
}

.accordion-item.active .accordion-content {
    max-height: 200px;
    padding: 15px 20px;

}

.accordion-item.active .accordion-icon {
    transform: rotate(45deg);
}
/* iPad / Tablet View */
@media (min-width: 769px) and (max-width: 1024px) {

  /* Make navbar full width */
  #ral {
    width: 100%;
    
  }

  
}

